# microsoft-challenge-demo

./: README.md
Microsoft/: Dockerfile  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Microsoft/config/: production.json
Microsoft/src/query_processor/: __init__.py  anomaly_detection.py  azure_integration.py  cache.py  feature_extraction.py  logging_utils.py  main.py  model_router.py  monitoring.py  ms365_integration.py
